# Mash-agent

./: .gitignore  CONTEXT.md  README.md  mash-agent-plan.md  mash_behavior.md  pyproject.toml
behaviour-tests/: 0_fixtures.md  1_move_copy.md  2_rename.md  3_delete.md  4_create.md  5_list.md  6_open_cat.md  7_disambiguation.md  8_llm_mixups.md  9_flags_and_edge_args.md
docs/agents/: domain.md
implementation_plans/: 1.0_core_agent.md  1.1_file_aware_context.md  1.2_command_templates.md  2.3_bug_fixes.md  3.10_mash_behavior_update.md  3.11_bug_fixes.md  3.1_bugs_found_and_fixes.md  3.2_source_selection_bug.md  3.3_shallow_to_default.md  3.4_improved_menus.md  3.5_bug_fix.md  3.6_touch_bug_fix.md  3.7_rename_extension_bug.md  3.8_mash_behaviour_update.md  3.9_mash_behaviour_update.md  4.0_oop_refactor.md  4.1_bare_create_verb_fix.md  4.2_test_failures_fix.md  4.3_unify_architecture.md  _template.md
mash/: comment-convention.md  intent.py  main.py  mash_cli.py
mash/exceptions/: __init__.py  destination_not_found.py  invalid_extension.py  llm_unavailable.py  mash_error.py  source_not_found.py  user_cancelled.py
mash/flows/: __init__.py  action_menu.py  browse_mode.py  create.py  create_flow.py  delete.py  delete_flow.py  list.py  list_flow.py  list_scope.py  move_copy.py  move_copy_flow.py  open_cat.py  open_cat_flow.py  rename.py  (+1 more)
mash_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: check_conventions.py
test_plans/: 2.1_stress_test.md  3.0_test_plan.md  baseline_output.txt  behaviour_baseline.sh
tests/: test_intent.py  test_mash_cli.py
(+64 files in other folders)
