[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mash-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["ollama"]

[tool.setuptools.packages.find]
include = ["mash*"]

[project.scripts]
mash = "mash.mash_cli:MashCLI.main"

[tool.coverage.run]
branch = true
source = ["mash"]
exclude_also = [
    "subprocess\\.run\\(",
    "ollama\\.chat\\(",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
